# aoc2025

./: .gitignore  README.md  aoc2025  base.py  pyproject.toml  runner.py
days/: __init__.py
days/day01/: __init__.py  solution.py  test_day01.py
days/day02/: solution.py  test_day02.py
days/day03/: solution.py  test_day03.py
days/day04/: solution.py  test_day04.py
days/day05/: solution.py  test_day05.py
days/day06/: solution.py  test_day06.py
days/day07/: solution.py  test_day07.py
days/day08/: solution.py  test_day08.py
days/day09/: __init__.py  solution.py  test_day09.py
days/day10/: solution.py  test_day10.py
days/day11/: solution.py  test_day11.py
days/day12/: solution.py  test_day12.py
